# app/Http/Controllers/AuthController.php
@@ -4,13 +4,8 @@ declare(strict_types=1);
 
 namespace App\Http\Controllers;
 
-use App\Models\User;
-use Illuminate\Support\Facades\Auth;
-use Illuminate\Support\Facades\Hash;
-use Tymon\JWTAuth\Facades\JWTAuth;
-use App\Http\Requests\Auth\RegisterRequest;
+use App\Services\AuthService;
 use App\Http\Requests\Auth\LoginRequest;
-use App\Http\Resources\AuthResource;
 use App\Http\Controllers\Controller;
 use Illuminate\Http\JsonResponse;
 
@@ -36,54 +31,15 @@ use Illuminate\Http\JsonResponse;
 class AuthController extends Controller
 {
 
-  protected $jwt;
-
-  public function __construct(JWTAuth $jwt)
-  {
-    $this->jwt = $jwt;
-  }
-
-
+  protected $service;
 
   /**
-   * @OA\Post(
-   *     path="/api/register",
-   *     summary="Register a new user",
-   *     tags={"Authentication"},
-   *     @OA\RequestBody(
-   *         required=true,
-   *         description="User registration data",
-   *         @OA\JsonContent(ref="#/components/schemas/RegisterRequest")
-   *     ),
-   *     @OA\Response(
-   *         response=201,
-   *         description="User registered successfully",
-   *         @OA\JsonContent(ref="#/components/schemas/User")
-   *     ),
-   *     @OA\Response(
-   *         response=400,
-   *         description="Bad request"
-   *     )
-   * )
+   * @param UserService $service
    */
-  public function register(RegisterRequest $request): AuthResource
+  public function __construct(AuthService $service)
   {
-    $user = User::create(array_merge(
-      $request->validated(),
-      [
-        'password' => Hash::make($request->password),
-        'active' => 1,
-      ]
-    ));
-
-    $keysToUnset = ['updated_at', 'password', 'id'];
-    array_walk($keysToUnset, function ($key) use (&$user) {
-      unset($user[$key]);
-    });
-
-    return new AuthResource($user);
+    $this->service = $service;
   }
-
 
   /**
    * @OA\Post(
@@ -113,14 +69,11 @@ class AuthController extends Controller
    */
   public function login(LoginRequest $request): JsonResponse
   {
-    $credentials = $request->validated();
-    $token = Auth::attempt($credentials);
-
-    if (!$token) {
-      return response()->json(['error' => 'Unauthorized'], 401);
+    try {
+      return $this->service->login($request->validated());
+    } catch (\Exception $exception) {
+      return $this->undefinedErrorResponse($exception);
     }
-
-    return $this->respondWithToken($token);
   }
 
   /**
@@ -141,36 +94,14 @@ class AuthController extends Controller
    */
   public function logout(): JsonResponse
   {
-    Auth::guard('api')->logout();
-    return response()->json(['message' => 'Successfully logged out']);
-  }
+    try {
+      $this->service->logout();
 
-  /**
-   * @OA\Get(
-   *     path="/api/me",
-   *     summary="Get the authenticated user",
-   *     tags={"Authentication"},
-   *     @OA\Response(
-   *         response=200,
-   *         description="Authenticated user data",
-   *         @OA\JsonContent(ref="#/components/schemas/User")
-   *     ),
-   *     security={{"bearerAuth":{}}}
-   * )
-   */
-  public function me(): AuthResource
-  {
-    return new AuthResource(Auth::guard('api')->user());
-  }
-
-
-
-  protected function respondWithToken($token): JsonResponse
-  {
-    return response()->json([
-      'access_token' => $token,
-      'token_type' => 'bearer',
-      'expires_in' => $this->jwt::factory()->getTTL() * 60
-    ]);
+      return $this->successResponse([
+        'message' => 'Successfully logged out'
+      ]);
+    } catch (\Exception $exception) {
+      return $this->undefinedErrorResponse($exception);
+    }
   }
 }
