# routes/api.php
@@ -17,12 +17,12 @@ use App\Http\Controllers\UserController;
 */
 
 
-Route::post('register', [AuthController::class, 'register']);
+Route::post('register', [UserController::class, 'register']);
 Route::post('login', [AuthController::class, 'login']);
 
-Route::middleware('auth.jwt')->group(function () {
+Route::middleware('authenticate')->group(function () {
     Route::post('logout', [AuthController::class, 'logout']);
-    Route::get('me', [AuthController::class, 'me']);
+    Route::get('me', [UserController::class, 'me']);
     Route::get('users', [UserController::class, 'index']);
 });
 
